# perfcapture

./: .coveragerc  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
examples/: read_numpy_file.py
perfcapture/: workload.py
perfcapture/examples/: read_numpy_file.py
scripts/: cli.py  perfcapture.py
src/perfcapture/: __init__.py  dataset.py  metrics.py  parameterize.py  performance_counters.py  timer.py  utils.py  workload.py
tests/: utils_test.py
