[metadata]
name = perfcapture
description = Run benchmark workloads and capture performance metrics
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/JackKelly/perfcapture
author = Jack Kelly
author_email = jack@openclimatefix.org
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: System :: Benchmark
    Typing :: Typed
project_urls = 
    Source = https://github.com/JackKelly/perfcapture

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    numpy >= 1.26.0
    pytest >= 7.4.2
    typer >= 0.9
python_requires = >=3.7
