[metadata]
name = perfcapture
version = 0.0.1
description = Run benchmark workloads and capture performance metrics
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zarr-developers/perfcapture
maintainer = Jack Kelly
maintainer_email = jack@openclimatefix.org
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: System :: Benchmark
    Typing :: Typed
project_urls = 
    Source = https://github.com/zarr-developers/perfcapture

[options]
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    numpy
    typer >= 0.9
    psutil
    pandas
python_requires = >=3.8

[options.packages.find]
where=src

[options.extras_require]
dev =
    mypy
    ruff

testing =
    pytest
    pytest-cov
    pytest-mypy
    pytest-ruff

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.4.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint